--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
+*{
+  margin: 0px;
+}
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  height: 100vh;
+  margin: 5px;
   display: flex;
   flex-direction: column;
+  gap: 10px;
+  /* width: 100vw; */
+}
+
+#buttons{
+  display: flex;
+  justify-content: flex-start;
+}
+.button{
+  width: fit-content;
+  height: 30px;
+}
+
+#nav{
+  width: 100%;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 10px;
+  font-size: 25px;
+}
+#nav>h3{
+  width: 10%;
 }
 
-.App-link {
-  color: #61dafb;
+.contacts{
+  display: flex;
+  align-items: center;
+  gap: 25px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.img{
+  height: 10rem;
+}
+.text{
+  width: 10%;
+  font-weight: 400;
+  font-size: 30px;
 }
