--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,8 @@
 
 #buttons{
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
+  gap: 20px;
 }
 .button{
   width: fit-content;
